support-frontend/assets/pages/digital-subscription-landing/components/digitalSubscriptionLanding.scss
/* ... */
.payment-selection__title-container {
  text-align: left;
  padding: 0 10px;

  max-width: 38.5rem;
  margin-bottom: 115px;

  @include mq($from: leftCol) {
    padding-left: 0;
  }
}

.payment-selection__title {
  font-family: $gu-headline;
  font-weight: 600;
  font-size: 18px;
  line-height: 1.3;

  @include mq($from: tablet) {
    font-size: 24px;
    line-height: 28px;
  }
}

div.call-to-action__container {
  margin-right: 0;
  display: flex;
  padding: 10px 0 50px 10px;
  background-color: #041f4a;
  max-width: calc(100%-10px);
  width: calc(100%-10px);

  @include mq($from: mobileLandscape) {
    padding-left: 0px;
  }

  @include mq($from: tablet) {
    padding-top: 70px;
  }

  @include mq($from: wide) {
    justify-content: center;
  }
  
  .hope-is-power--centered {
    background-color: #041f4a;
    color: #ffffff;
    overflow: hidden;

    @include mq($from: wide) {
      padding-left: 0;
    }

    h2 {
      margin-bottom: 12px;
      padding-left: 0;
      max-width: gu-span(4);
      @include gu-fontset-heading;
      font-size: 22px;
      line-height: 28px;

      @include mq($from: mobileLandscape) {
        padding-left: 15px;
        max-width: gu-span(5);
      }

      @include mq($from: phablet) {
        padding-left: 5px;
      }

      @include mq($from: tablet) {
        padding-left: 20px;
        font-size: 34px;
        line-height: 38px;
        max-width: gu-span(8);
      }

      @include mq($from: desktop) {
        max-width: gu-span(12);
      }

      @include mq($from:leftCol) {
        padding-left: 40px;
      }

      @include mq($from:wide) {
        padding-left: 50px;
      }
    }

    h3 {
      margin-bottom: 20px;
      padding-left: 0;
      @include gu-fontset-body-sans;
      font-size: 17px;
      max-width: gu-span(4);

      @include mq($from: mobileLandscape) {
        padding-left: 15px;
        max-width: gu-span(5);
      }

      @include mq($from: phablet) {
        padding-left: 5px;
        max-width: gu-span(7);
      }

      @include mq($from: tablet) {
        padding-left: 20px;
        margin-bottom: 40px;
        font-size: 16px;
      }

      @include mq($from:leftCol) {
        padding-left: 40px;
      }

      @include mq($from:wide) {
        padding-left: 50px;
      }
    }
  }

  div.hope-is-powered--centered {
    .payment-selection__card {
      @include mq($until: desktop) {
        width: 40%;
      }

      @include mq($until: tablet) {
        width: calc(100% - 200px);
      }

      @include mq($until: phablet) {
        margin-left: 20px;
        width: calc(100% - 150px);
      }

      @include mq($until: mobileLandscape) {
        margin-left: 20px;
        width: calc(100% - 50px);
      }

      @include mq($until: mobileMedium) {
        margin-left: 0px;
        width: calc(100% - 30px);
      }
    }

    .payment-selection__card:first-of-type {
      margin-left: 0;
      
      @include mq($from: tablet) {
        margin-left: 50px;
      }

      @include mq($from: wide) {
        margin-left: 30px;
      }

      @include mq($from: 1396px) {
        margin-left: 50px;
      }
    }

    .payment-selection__card:nth-of-type(2) {
      @include mq($until: tablet) {
        margin-top: 40px;
      }

      @include mq($until: phablet) {
        margin-left: 20px;
      }

      @include mq($until: mobileLandscape) {
        margin-left: 0px;
      }
    }
  }
}

.hope-is-power__terms {
  display: flex;
  justify-content: center;
  @include gu-fontset-body-sans;
  font-size: 14px;
  padding: 26px 0 33px 10px;

  @include mq($from: phablet) {
    padding-left: 0px;
  }

  h3 {
    font-weight: 600;
  }

  h3, p {
    max-width: calc(100% - 20px);

    @include mq($from: mobileMedium) {
      max-width: gu-span(4);
    }

    @include mq($from: mobileLandscape) {
      max-width: gu-span(5);
    }

    @include mq($from: phablet) {
      max-width: gu-span(7);
      padding-left: 0px;
    }

    @include mq($from: tablet) {
      max-width: gu-span(8);
    }

    @include mq($from: desktop) {
      padding-left: 0px;
      margin-left: 20px;
    }

    @include mq($from: leftCol) {
      padding-left: 25px;
      margin-left: 0;
    }

    @include mq($from: wide) {
      padding-left: 25px;
    }
  }

  a, a:visited {
    color: #121212;
  }
}

